# aiom4b

./: .gitignore  API.md  ARCHITECTURE.md  DB.md  Dockerfile  README.md  TAGGING.md  UI.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  start.sh  test_conversion.py
aiom4b/: __init__.py  api.py  cli.py  config.py  converter.py  database.py  job_service.py  main.py  models.py  tagging_service.py  utils.py
web-ui/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
web-ui/app/: layout.tsx  page.tsx  providers.tsx
web-ui/app/jobs/: page.tsx
web-ui/app/tagging/: page.tsx
web-ui/components/: app-sidebar.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  site-header.tsx
web-ui/lib/: api.ts  utils.ts
