[tool.poetry]
name = "aiom4b"
version = "0.1.0"
description = "MP3 to M4B conversion application with CLI and REST API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "aiom4b"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
typer = {extras = ["all"], version = "^0.9.0"}
ffmpeg-python = "^0.2.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.25.2"
rich = "^13.7.0"
click = "^8.1.7"
sqlmodel = "^0.0.14"
requests = "^2.32.5"
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
